2009-02-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/preferences.c: Partly reformatted and doc

	* openvasd/preferences.c (preferences_plugin_timeout): (fully)
	reformatted + doc.

2009-02-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/openvasd.c: In mainpage doc, corrected section name.

2009-02-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/openvasd.c: Added mainpage directive for code documentation.
	Included README and LICENSE files in the mainpage.

2009-02-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Replaced outdated INSTALL by slightly more verbose README.

	* INSTALL: Removed. Information was few and outdated. Superseded by
	README.
	
	* README: New. Contains installation and set-up instructions.
	
	* MANIFEST: Updated (-INSTALL +README).

2009-02-13  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Format and doc in openvasd module.

	* openvasd/openvasd.c: Transformed function headers, replaced static
	var from middle of file to beginning of file, transformed comments.

2009-02-13  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/pluginload.c (plugins_reload_from_dir): Don't try to split
	include_folders if there is no such preference. 

2009-02-13  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/pluginscheduler.c (hash_fill_deps): Improved
	warning message to avoid misinterpretation.

	* openvasd/shared_socket.c (shared_socket_process): Improved
	documentation.

	* openvasd/pluginlaunch.c (read_running_processes): Write a
	log entry in case of process_internal_msg fails.

	* Makefile: Renamed old target "doc" to "man" to avoid
	having two targets "doc".

2009-02-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* doc/Doxyfile, doc/Doxyfile_full: New. Directives for
	creation of doxygen source code documentation.

	* Makefile: Added targets "doc" and "doc-full".

	* MANIFEST: Updated.
